--- a/city_EDA.ipynb
+++ b/city_EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "315bc74e-ef85-441c-b03d-3d4dc67b9774",
    "metadata": {
     "tags": [
@@ -16,13 +16,14 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import warnings\n",
+    "from datetime import datetime, timedelta\n",
     "warnings.filterwarnings('ignore')\n",
     "# %run cab_data_EDA.ipynb "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "ba93543c",
    "metadata": {},
    "outputs": [],
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "ae9598a8",
    "metadata": {
     "tags": []
@@ -143,7 +144,7 @@
        "9      ATLANTA GA     814,885     24,701 "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "a2dbc094",
    "metadata": {
     "tags": []
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "a116ac36",
    "metadata": {
     "tags": []
@@ -204,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "8455bbfa",
    "metadata": {},
    "outputs": [
@@ -231,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "1a16558b",
    "metadata": {},
    "outputs": [
@@ -351,7 +352,7 @@
        "9      ATLANTA GA      814885   24701    3.031225"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "eb1adf80",
    "metadata": {},
    "outputs": [
@@ -390,18 +391,239 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "22d6bffb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "city_data[city_data['Perc_Users'] == city_data['Perc_Users'].max()]"
+    "len(city_data['City'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "017cbb55-6a0d-4577-8602-6a2d7dcd1990",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Transaction ID</th>\n",
+       "      <th>Date of Travel</th>\n",
+       "      <th>Company</th>\n",
+       "      <th>City</th>\n",
+       "      <th>KM Travelled</th>\n",
+       "      <th>Price Charged</th>\n",
+       "      <th>Cost of Trip</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10000011</td>\n",
+       "      <td>2016-01-08</td>\n",
+       "      <td>Pink Cab</td>\n",
+       "      <td>ATLANTA GA</td>\n",
+       "      <td>30.45</td>\n",
+       "      <td>370.95</td>\n",
+       "      <td>313.635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10000012</td>\n",
+       "      <td>2016-01-06</td>\n",
+       "      <td>Pink Cab</td>\n",
+       "      <td>ATLANTA GA</td>\n",
+       "      <td>28.62</td>\n",
+       "      <td>358.52</td>\n",
+       "      <td>334.854</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10000013</td>\n",
+       "      <td>2016-01-02</td>\n",
+       "      <td>Pink Cab</td>\n",
+       "      <td>ATLANTA GA</td>\n",
+       "      <td>9.04</td>\n",
+       "      <td>125.20</td>\n",
+       "      <td>97.632</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10000014</td>\n",
+       "      <td>2016-01-07</td>\n",
+       "      <td>Pink Cab</td>\n",
+       "      <td>ATLANTA GA</td>\n",
+       "      <td>33.17</td>\n",
+       "      <td>377.40</td>\n",
+       "      <td>351.602</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10000015</td>\n",
+       "      <td>2016-01-03</td>\n",
+       "      <td>Pink Cab</td>\n",
+       "      <td>ATLANTA GA</td>\n",
+       "      <td>8.73</td>\n",
+       "      <td>114.62</td>\n",
+       "      <td>97.776</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>10000016</td>\n",
+       "      <td>2016-01-07</td>\n",
+       "      <td>Pink Cab</td>\n",
+       "      <td>ATLANTA GA</td>\n",
+       "      <td>6.06</td>\n",
+       "      <td>72.43</td>\n",
+       "      <td>63.024</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>10000017</td>\n",
+       "      <td>2016-01-03</td>\n",
+       "      <td>Pink Cab</td>\n",
+       "      <td>AUSTIN TX</td>\n",
+       "      <td>44.00</td>\n",
+       "      <td>576.15</td>\n",
+       "      <td>475.200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>10000018</td>\n",
+       "      <td>2016-01-07</td>\n",
+       "      <td>Pink Cab</td>\n",
+       "      <td>AUSTIN TX</td>\n",
+       "      <td>35.65</td>\n",
+       "      <td>466.10</td>\n",
+       "      <td>377.890</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>10000019</td>\n",
+       "      <td>2016-01-12</td>\n",
+       "      <td>Pink Cab</td>\n",
+       "      <td>BOSTON MA</td>\n",
+       "      <td>14.40</td>\n",
+       "      <td>191.61</td>\n",
+       "      <td>146.880</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10000020</td>\n",
+       "      <td>2016-01-06</td>\n",
+       "      <td>Pink Cab</td>\n",
+       "      <td>BOSTON MA</td>\n",
+       "      <td>10.89</td>\n",
+       "      <td>156.98</td>\n",
+       "      <td>113.256</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Transaction ID Date of Travel   Company        City  KM Travelled  \\\n",
+       "0        10000011     2016-01-08  Pink Cab  ATLANTA GA         30.45   \n",
+       "1        10000012     2016-01-06  Pink Cab  ATLANTA GA         28.62   \n",
+       "2        10000013     2016-01-02  Pink Cab  ATLANTA GA          9.04   \n",
+       "3        10000014     2016-01-07  Pink Cab  ATLANTA GA         33.17   \n",
+       "4        10000015     2016-01-03  Pink Cab  ATLANTA GA          8.73   \n",
+       "5        10000016     2016-01-07  Pink Cab  ATLANTA GA          6.06   \n",
+       "6        10000017     2016-01-03  Pink Cab   AUSTIN TX         44.00   \n",
+       "7        10000018     2016-01-07  Pink Cab   AUSTIN TX         35.65   \n",
+       "8        10000019     2016-01-12  Pink Cab   BOSTON MA         14.40   \n",
+       "9        10000020     2016-01-06  Pink Cab   BOSTON MA         10.89   \n",
+       "\n",
+       "   Price Charged  Cost of Trip  \n",
+       "0         370.95       313.635  \n",
+       "1         358.52       334.854  \n",
+       "2         125.20        97.632  \n",
+       "3         377.40       351.602  \n",
+       "4         114.62        97.776  \n",
+       "5          72.43        63.024  \n",
+       "6         576.15       475.200  \n",
+       "7         466.10       377.890  \n",
+       "8         191.61       146.880  \n",
+       "9         156.98       113.256  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#load the datasets\n",
+    "cab_data = pd.read_csv('./DataSets/Cab_Data.csv')\n",
+    "\n",
+    "# Convert 'Date of Travel' to the right format\n",
+    "def convert_date(n):\n",
+    "    start_date = datetime(1899, 12, 30)\n",
+    "    current_date = start_date + timedelta(days = int(n))\n",
+    "    \n",
+    "    return current_date\n",
+    "\n",
+    "cab_data['Date of Travel'] = cab_data['Date of Travel'].apply(lambda x: convert_date(x))\n",
+    "\n",
+    "cab_data.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d2d71c96-876a-46c3-81a9-2eb553027a28",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "merge() missing 2 required positional arguments: 'left' and 'right'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [12]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m cab_city_df \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmerge\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: merge() missing 2 required positional arguments: 'left' and 'right'"
+     ]
+    }
+   ],
+   "source": [
+    "cab_city_df = pd.merge()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "017cbb55-6a0d-4577-8602-6a2d7dcd1990",
+   "id": "8ba32fea-3430-4b67-af82-08a5f61fab4f",
    "metadata": {},
    "outputs": [],
    "source": []
