--- a/Master.ipynb
+++ b/Master.ipynb
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27f877ba",
+   "id": "f478f21a",
    "metadata": {},
    "source": [
     "#### Revenue"
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bee38aa2",
+   "id": "4a309946",
    "metadata": {},
    "source": [
     "#### Income"
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "da231f7e",
+   "id": "e98c2d28",
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "329caa79",
+   "id": "466ba445",
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +1036,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "bdbbc92b",
+   "id": "bce1c5d9",
    "metadata": {},
    "outputs": [
     {
@@ -1442,7 +1442,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "a90a8ee5",
+   "id": "2be89bbd",
    "metadata": {},
    "outputs": [
     {
@@ -1469,7 +1469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec30f1d0",
+   "id": "3d8e9984",
    "metadata": {},
    "source": [
     "#### Monthly Rides Comparison"
@@ -1478,7 +1478,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "642e3fe5",
+   "id": "fca6549a",
    "metadata": {},
    "outputs": [
     {
@@ -1505,7 +1505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dcb659a",
+   "id": "711aabc6",
    "metadata": {},
    "source": [
     "#### ans1- Yellow Cab company has much more cab users Yearly and monthly from 2016 to 2019\n",
@@ -1514,7 +1514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "012c716d",
+   "id": "efc4c30c",
    "metadata": {},
    "source": [
     "#### q2- Does margin proportionally increase with increase in number of customers ?"
@@ -1522,7 +1522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "142f1e4a",
+   "id": "da03df9e",
    "metadata": {},
    "source": [
     "---\n",
@@ -1532,7 +1532,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "2708a017",
+   "id": "8692dba4",
    "metadata": {},
    "outputs": [
     {
@@ -1559,7 +1559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0f9e130",
+   "id": "33795aad",
    "metadata": {},
    "source": [
     "#### Monthly Income Comparison"
@@ -1568,7 +1568,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "7f3645d9",
+   "id": "27e6415b",
    "metadata": {},
    "outputs": [
     {
@@ -1595,7 +1595,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54bc96bf",
+   "id": "2a31ddb4",
    "metadata": {},
    "source": [
     "#### ans2- Yes, Yellow cab company has much more income than pink cab company, since it has more customers\n",
@@ -1604,7 +1604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25e81ca2",
+   "id": "82b20db9",
    "metadata": {},
    "source": [
     "#### City Data"
@@ -1613,7 +1613,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "1ab39c9d",
+   "id": "92085cde",
    "metadata": {},
    "outputs": [
     {
@@ -1744,7 +1744,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "4b916cb8",
+   "id": "2c7cb812",
    "metadata": {},
    "outputs": [
     {
@@ -1765,7 +1765,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "773b1c40",
+   "id": "47d57b45",
    "metadata": {},
    "outputs": [
     {
@@ -1793,7 +1793,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "4564b4ac",
+   "id": "a6d634e8",
    "metadata": {},
    "outputs": [
     {
@@ -1898,7 +1898,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4e04780",
+   "id": "e26594a4",
    "metadata": {},
    "source": [
     "---\n",
@@ -1906,9 +1906,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8d78c4ae",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### Population Distribution"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 211,
-   "id": "69b74d72",
+   "id": "ac7ff4ce",
    "metadata": {},
    "outputs": [
     {
@@ -1937,9 +1946,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8c36dbd3",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### Cab User Distribution"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 205,
-   "id": "2428e75e",
+   "id": "9878703b",
    "metadata": {},
    "outputs": [
     {
@@ -1968,9 +1986,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b9a5369c",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### Percentage Distribution"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 196,
-   "id": "80bffaf8",
+   "id": "a9f30ec2",
    "metadata": {},
    "outputs": [
     {
@@ -2000,7 +2027,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88bb6129",
+   "id": "d05172bc",
    "metadata": {},
    "source": [
     "----\n",
@@ -2010,7 +2037,7 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "5fe31717",
+   "id": "f0978bab",
    "metadata": {},
    "outputs": [
     {
@@ -2263,7 +2290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6047b271",
+   "id": "cb27a706",
    "metadata": {},
    "source": [
     "---\n",
@@ -2273,7 +2300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "463fa5a6",
+   "id": "78fcca07",
    "metadata": {},
    "outputs": [],
    "source": [
